fix(output): remove overlapping of multiple definitions, show antonyms
#2

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,8 @@
   --fishLoaderWhite: url("images/loader_fish_white.svg");
   --standardTransition: all 0.3s ease-in-out;
   --inputBorder: 1px solid hsl(0, 0%, 80%);
+  --outputBorderGradientLight: linear-gradient(90deg, rgba(40,44,52,0) 0%, rgba(40,44,52,0) 30%, rgba(40,44,52,1) 100%);
+  --outputBorderGradientDark: linear-gradient(90deg, rgba(236,236,236,0) 0%, rgba(236,236,236,0) 30%, rgba(236,236,236,1) 100%);
 }
 
 * {
@@ -59,6 +61,7 @@ body.light {
   --select-scrollbar-thumb: var(--lightGrey);
   --loading-gif: var(--fishLoaderBlack);
   --output-border: var(--black);
+  --output-gradient-border: var(--outputBorderGradientLight);
   --placeholder-color: var(--placerholderColorLight);
 }
 
@@ -78,6 +81,7 @@ body.dark {
   --select-scrollbar-thumb: var(--darkGrey);
   --loading-gif: var(--fishLoaderWhite);
   --output-border: var(--white);
+  --output-gradient-border: var(--outputBorderGradientDark);
   --placeholder-color: var(--placerholderColorDark);
 }
 
