--- a/src/components/OneMeaning.css
+++ b/src/components/OneMeaning.css
@@ -1,24 +1,22 @@
 .meaning {
-  display: grid;
-  grid-template-columns: 0.4fr 1.5fr;
-  grid-template-rows: 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas: "partOfSpeech definitions";
+  display: flex;
   min-height: 200px;
 }
 
-.meaning > div {
-    padding-top: 2rem;
-}
-
 .part_of_speech {
-  grid-area: partOfSpeech;
+  flex: 0 0 20%;
   border-right: 1px solid var(--output-border);
+  border-bottom: 1px solid transparent;
+  border-image: var(--output-gradient-border);
+  border-image-slice: 1;
   text-align: right;
   padding-right: 50px;
   font-weight: 500;
-  padding: 2rem 50px 25px;
+  padding-top: 2rem;
+}
+
+.part_of_speech.last_one {
+  border-bottom: none;
 }
 
 .part_of_speech_text {
@@ -26,19 +24,30 @@
 }
 
 .definitions {
-  grid-area: definitions;
-  font-weight: 500;
-  line-height: 1;
-  padding: 2rem 100px 1.5rem 50px;
-  border-bottom: 1px solid var(--output-border);
+  display: flex;
+  flex-direction: column;
+  width: 100%
 }
 
 .definition {
+  font-weight: 500;
+  line-height: 1;
+  padding: 2rem 100px 1.5rem 50px;
+  border-bottom: 1px solid var(--output-border); 
+  flex: 0 0 auto;
+  min-height: 200px;
+}
+
+.definition_text {
     font-size: 30px;
 }
 
-.example {
+.definition_example {
     margin-top: 1rem;
     color: var(--grey);
     font-style: italic;
+}
+
+.word_lists {
+  margin-top: 2rem;
 }
